# zag-quant-lab

./: .gitignore  Home.py  README.md  app.py  pyproject.toml  requirements.txt
pages/: 1_Regime_Detection.py  2_Signal_Research.py  3_Portfolio_Risk.py  4_Stress_Testing.py
src/zag_financial_lab/: __init__.py
src/zag_financial_lab/analysis/: __init__.py
src/zag_financial_lab/data/: __init__.py  sample_data.py
src/zag_financial_lab/features/: __init__.py
src/zag_financial_lab/models/: __init__.py
src/zag_financial_lab/plotting/: __init__.py
src/zag_financial_lab/signals/: __init__.py
src/zag_financial_lab/stats/: __init__.py
